force-app/main/default/objects/RD_Tag_Part_Number__c/RD_Tag_Part_Number__c.object-meta.xml
<CustomObject>
    <label>RD Tag Part Number</label>
    <nameField>
        <label>RD Tag Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Tag Part Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>