force-app/main/default/objects/RD_Tag_Part_Number__c/fields/DiscTopThick_UL__c.field-meta.xml
<CustomField>
    <fullName>DiscTopThick_UL__c</fullName>
    <label>DiscTopThick UL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>