force-app/main/default/objects/RD_Tag_Part_Number__c/fields/MCHS_Attach__c.field-meta.xml
<CustomField>
    <fullName>MCHS_Attach__c</fullName>
    <label>MCHS Attach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>