force-app/main/default/objects/RD_Tag_Part_Number__c/fields/MCVS_Attach__c.field-meta.xml
<CustomField>
    <fullName>MCVS_Attach__c</fullName>
    <label>MCVS Attach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>