force-app/main/default/objects/RD_Tag_Part_Number__c/fields/SizeValue_UL__c.field-meta.xml
<CustomField>
    <fullName>SizeValue_UL__c</fullName>
    <label>SizeValue UL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>