force-app/main/default/objects/RD_Tag_Part_Number__c/fields/STC__c.field-meta.xml
<CustomField>
    <fullName>STC__c</fullName>
    <label>STC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>