force-app/main/default/objects/RD_Tag_Part_Number__c/fields/TagExtensionPartNumber__c.field-meta.xml
<CustomField>
    <fullName>TagExtensionPartNumber__c</fullName>
    <label>TagExtensionPartNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>